--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sql.js": "^0.3.2"
   },
   "scripts": {
-    "start": "nf start -p 3000",
+    "dev": "nf start -p 3000",
     "server": "./node_modules/.bin/babel-node server.js"
   }
 }
