--- a/client/package.json
+++ b/client/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.13.0"
   },
   "scripts": {
     "start": "node ./build/dev/server.js"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "eslint": "^3.10.2",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-react": "^6.7.1",
-    "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
