--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,17 @@
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "eslint": "^3.10.2",
+    "eslint-formatter-vso": "^0.1.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.7.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
