adding galleryimage, tuning galleryfolder, adding sharp for image processing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "foreman": "1.4.1",
     "fs": "0.0.2",
     "lodash": "^4.16.6",
+    "sharp": "^0.16.2",
     "sql.js": "^0.3.2"
   },
   "scripts": {
