--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.7.1",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "react-photo-gallery": "*"
   }
 }
